# saints-xctf-infrastructure

./: .gitignore  README.md  WORKSPACE.bazel
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: aws_tests.yml  k8s_tests.yml  python_code.yml  terraform.yml
0x18/: xxiv.html
acm/: README.md  main.tf
acm/api-saints-xctf/: .terraform.lock.hcl  README.md  main.tf
acm/asset-saints-xctf/: README.md  main.tf
api/: main.tf
bastion/: README.md  bastion-key-gen.sh  bastion-setup.sh  main.tf  use-cases.sh
database/: README.md  main.tf
database-backup/: README.md
database-client/: .terraform.lock.hcl  README.md  main.tf  var.tf
database-deployment/: README.md
database-snapshot/: README.md
ecs/: main.tf
iam/: README.md  main.tf
route53/: README.md  configure-https.sh  main.tf
s3-asset/: README.md  main.tf  policy.json
s3-uasset/: main.tf  policy.json
saints-xctf-com/: README.md
saints-xctf-com-api/: README.md
saints-xctf-com-asset/: main.tf
saints-xctf-com-auth/: README.md
saints-xctf-com-fn/: README.md
saints-xctf-com-ingress/: README.md
saints-xctf-com-uasset/: README.md  main.tf  policy.json
secrets-manager/: README.md
synthetic-monitoring/: README.md
test/: Pipfile  README.md  masterTestFuncs.py  masterTestSuite.py  requirements.txt  runner.py  setup.sh  test-suite.py
test-k8s/: README.md  client.go  go.mod  go.sum  main_test.go  namespace_test.go  saints_xctf_api_test.go  saints_xctf_namespace.go  saints_xctf_test.go  saints_xctf_web_test.go
test/ci/: README.md  (+2 more)
web-app/: README.md
web-server/: README.md
(+390 files in other folders)
